# HDJ

./: .gitattributes  .gitignore  HOW_IT_WORKS.md  README.md  evaluate.py  index_meta.json  pyproject.toml  queries.json  run.bat  run.ps1  run.sh  setup.ps1  setup.sh
.streamlit/: config.toml
data/defaults/: gold_standard.json  queries.json
data/gold_standard/: definition.md
data/processed/: digital_together.md  taylor.md
frontend/: README.md  app.py  ui_help.py
results/: eval_20260120_192047.json
scripts/: ui_smoke_test.py
src/hdj/: __init__.py  audit.py  evaluate.py  export.py  history.py  rag.py  translate.py
tests/: conftest.py  test_audit.py  test_evaluate.py  test_export.py  test_history.py  test_references.py  test_translate.py
