[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hdj-rag"
version = "0.1.0"
description = "Health Data Justice RAG pipeline"
requires-python = ">=3.12"
dependencies = [
    "haiku.rag>=0.25.0",
    "streamlit>=1.40.0",
    "argostranslate>=1.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
